# CrystalX

./: REPOS_OVERVIEW.md  environment.yml  readme.md
inference_repo/: .gitignore  README.legacy.md  README.md  pyproject.toml  requirements.txt
inference_repo/crystalx_infer/: __init__.py
inference_repo/crystalx_infer/analysis/: __init__.py  compare_aihydroweight_ratio.py  copy_aihydroweight_cif.py  copy_mismatch_case_folders.py  plot_complex.py  plot_snr.py  stat_chk_alert2_ab.py
inference_repo/crystalx_infer/common/: __init__.py  checkpoints.py  chem.py  datasets.py  heavy.py  hydrogen.py  modeling.py  paths.py  runtime.py  shelx.py  utils.py
inference_repo/crystalx_infer/models/: __init__.py  noise_output_model.py  torchmd_et.py  torchmd_net.py  torchmd_utils.py
inference_repo/crystalx_infer/pipelines/: __init__.py  infer_heavy_temporal.py  infer_hydro_temporal.py  infer_joint_heavy_hydro_temporal.py  predict_heavy.py  predict_hydro.py  temp_demo_new_hydro.py  temp_demo_new_joint_predict.py  temp_demo_new_main.py
inference_repo/crystalx_infer/postprocess/: __init__.py  prepare_bond_inputs.py  prepare_weight_refine.py  run_platon_on_cif.py  temp_demo_new_bond_cal.py  temp_demo_new_weight_refine.py  temp_demo_new_write_xyz.py  write_final_outputs.py
inference_repo/scripts/: batch_run_all.sh  download_weights.sh  infer_heavy.sh  infer_hydro.sh  infer_joint.sh  run_demo.sh  run_demo_batch.sh  temp_demo_new.sh
training_code/: .gitignore  README.legacy.md  README.md  pyproject.toml  requirements.txt
training_code/crystalx_train/: __init__.py
(+67 files in other folders)
