[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crystalx-infer"
version = "0.1.0"
description = "Inference workflow for CrystalX."
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
crystalx-download-weights = "crystalx_infer.tools.download_weights:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["crystalx_infer*"]
