[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crystalx-train"
version = "0.1.0"
description = "Training workflow for CrystalX."
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["crystalx_train*"]
